fix: responsive layout on mobile

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ label {
 @media (max-width: 768px)
 /* this is like a IF statement (if the screen width is 768px or less -> switch to the mobile (the code in the curly {} ) ) */
   {
-  .page-container
+  .pageContainer
 
   /* changing the layout (row->col) */
     {
@@ -214,7 +214,7 @@ label {
   }
 
   .imageSection {
-    /* rmove the image for better UX */
+    /* remove the image for better UX */
     display: none;
   }
 
@@ -222,15 +222,24 @@ label {
     width: 100%;
     /*cover all screen cuz there is no image */
     padding: 20px;
+    min-width: unset;
+    box-sizing: border-box;
   }
 
   .whole-card {
     width: 90%;
-    /* a liitle bit smaller that the screen width */
-    max-width: 400%;
+    /* a little bit smaller than the screen width */
+    max-width: 400px;
     /* for tablets */
+    box-sizing: border-box;
   }
 
+  .input_fields {
+    width: 90%;
+  }
 
+  .button {
+    width: 100%;
+  }
 
 }
